--- a/lib/.gitignore
+++ b/lib/.gitignore
@@ -1,57 +1,58 @@
-Apache/
-App/
-Archive/
-Bundle/
-CGI*
-CPAN/
-Capture/
-Carp/
-Class/
-Compress/
-Config/
-DateTime/
-Devel/
-Exception/
-Expect*
-File/
-FreezeThaw*
-HTML/
-HTTP/
-IO/
-IPC/
-Image/
-Inline*
-Inline/
-JSON/
-LWP*
-Locale/
-Mail/
-Module/
-Net/
-Object/
-Params/
-Parse/
-Perl/
-Pod/
-Proc/
-Regexp/
-TAP/
-Term/
-Test*
-Text/
-Time/
-Tree/
-UNIVERSAL/
-URI*
-WWW/
-XML/
-YAML/
-auto/
-bin/
-inc/
-x86_64-linux-thread-multi/
-lwpcook.pod
-lwptut.pod
-perlpod.pod
-perlpodspec.pod
-prefork.pm
+/Apache/
+/App/
+/Archive/
+/Bundle/
+/CGI/
+/CGI.pm
+/CPAN/
+/Capture/
+/Carp/
+/Class/
+/Compress/
+/Config/
+/DateTime/
+/Devel/
+/Exception/
+/Expect*
+/File/
+/FreezeThaw*
+/HTML/
+/HTTP/
+/IO/
+/IPC/
+/Image/
+/Inline*
+/Inline/
+/JSON/
+/LWP*
+/Locale/
+/Mail/
+/Module/
+/Net/
+/Object/
+/Params/
+/Parse/
+/Perl/
+/Pod/
+/Proc/
+/Regexp/
+/TAP/
+/Term/
+/Test*
+/Text/
+/Time/
+/Tree/
+/UNIVERSAL/
+/URI*
+/WWW/
+/XML/
+/YAML/
+/auto/
+/bin/
+/inc/
+/x86_64-linux-thread-multi/
+/lwpcook.pod
+/lwptut.pod
+/perlpod.pod
+/perlpodspec.pod
+/prefork.pm
