--- a/conf/messages.conf
+++ b/conf/messages.conf
@@ -220,15 +220,16 @@ duplicate_media_upload "A media object with the filename '$filename' already exi
 </Module>
 
 <Module "Krang::CGI::Site">
-  duplicate_preview_path            "There is already a site with that preview path."
-  duplicate_preview_url             "There is already a site with that preview url."
-  duplicate_publish_path            "There is already a site with that publish path."
-  duplicate_url                     "There is already a site with that url."
+  duplicate_preview_path            "There is already a site with that Preview Path."
+  duplicate_preview_url             "There is already a site with that Preview URL."
+  duplicate_publish_path            "There is already a site with that Publish Path."
+  duplicate_url                     "There is already a site with that URL."
   error_deletion_failure            "Unable to delete site(s): $urls. You must delete underlying categories and/or content first. (Note that remaining content may be retired or in the trash.)"
-  error_invalid_preview_url         "Please specify a valid preview_url."
-  error_invalid_preview_path        "Please specify a valid preview_path."
-  error_invalid_publish_path        "Please specify a valid publish_path."
-  error_invalid_url                 "Please specify a valid url."
+  error_invalid_preview_url         "Please specify a valid Preview URL."
+  error_invalid_preview_path        "Please specify a valid Preview Path."
+  error_invalid_publish_path        "Please specify a valid Publish Path."
+  error_invalid_url                 "Please specify a valid URL."
+  error_invalid_cdn_url             "Please specify a valid CDN URL."
   error_url_has_http                "Site URL must not include the http:// portion of the URL."
   error_preview_url_has_http        "Site preview URL must not include the http:// portion of the URL."
   error_url_has_path                "Site URL must not include directories.  Remove all forward slashes and anything after them."
@@ -237,6 +238,9 @@ duplicate_media_upload "A media object with the filename '$filename' already exi
   error_preview_url_has_bad_chars   "Site Preview URL contains invalid characters.  Valid characters for a URL are letters, numbers, periods, hypens and underscores."
   error_publish_path_not_absolute   "Site Publish Path must be an absolute path, starting with '/'."
   error_preview_path_not_absolute   "Site Publish Path must be an absolute path, starting with '/'."
+  error_cdn_url_has_http            "Site CDN URL must not include the http:// portion of the URL."
+  error_cdn_url_has_path            "Site CDN URL must not include directories.  Remove all forward slashes and anything after them."
+  error_cdn_url_has_bad_chars       "Site CDN URL contains invalid characters.  Valid characters for a URL are letters, numbers, periods, hypens and underscores.  A colon followed by a port number is also allowed."
   message_add_cancelled             "Add site cancelled."
   message_deleted                   "Site: $url deleted."
   message_edit_cancelled            "Edit site cancelled."
